# RL-ARC-AGI-3

./: .env.example  .gitignore  README.md  pyproject.toml
docs/plans/: 2026-03-27-001-feat-arc-hackathon-setup-plan.md
docs/setup/: arc-hackathon-environment.md
docs/solutions/developer-experience/: arc-agi-offline-starter-needs-environment-files-2026-03-27.md
environment_files/hack1/: hack.py  metadata.json
scripts/: check_arc_env.sh
src/rl_arc_agi_3/: __init__.py  config.py  main.py
tests/: test_cli.py  test_config.py  test_setup_script.py  test_smoke.py
